name:                gl-scene-math
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/psandahl/gl-scene-math#readme
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@gmail.com
copyright:           2017 Patrik Sandahl
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Scene.Math
  other-modules:       Scene.Math.Angle
                       Scene.Math.AspectRatio
                       Scene.Math.Matrix
                       Scene.Math.Vector
  build-depends:       base >= 4.7 && < 5
                     , flow
                     , lens
                     , linear
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite gl-scene-math-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , gl-scene-math
                     , HUnit
                     , HUnit-approx
                     , linear
                     , test-framework
                     , test-framework-hunit
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/psandahl/gl-scene-math
